Changes on mobile and fix bugs

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -7,12 +7,7 @@
 
 }
 
-@media(min-width: 1450px){
-	 #sobre .curriculo {
-    	width: 40%;
-    	font-size: 2em;
-    }
-}
+
 @media(max-width: 1355px) {
 	#trabalhos .trabalhos-secao .trabalho { width: 43%; }
 
@@ -36,6 +31,13 @@
 
 }
 
+@media(max-width: 1086px){
+	 #sobre .curriculo {
+    	width: 30%;
+    	padding: 3%;
+    }
+}
+
 @media(max-width: 980px) {
 	#home .welcome { margin-left: 20%; }
 
@@ -43,7 +45,10 @@
 }
 
 @media(max-width: 810px) {
-	#sobre .curriculo { width: 80%; }
+	#sobre .curriculo { 
+		width: 40%;
+    		padding: 4%;
+	 }
 } 
 
 @media(max-width: 768px) {
@@ -53,11 +58,16 @@
 }
 
 @media(max-width: 580px) {
-	#home #header { display: none; }
+	#home #header,
+	#home .fixed { display: none; }
 	#eu .referencia p { font-size: 10pt; }
 	#home .welcome h1 { font-size: 30pt !important; }
 	#sobre .container p { font-size: 18pt; }
-	#sobre .curriculo { margin-top: 8%; }
+	#sobre .curriculo { 
+		margin-top: 8%;
+		width: 50%;
+    		padding: 5%;
+	 }
 	#trabalhos h1 { font-size: 2em; }
 	#recomendacoes .slick-prev, 
 	#recomendacoes .slick-next { display: none !important; }
@@ -70,6 +80,12 @@
 
 }
 
+@media(max-width: 500px) {
+	#trabalhos .trabalhos-secao .trabalho {
+		width: 100%;
+	}
+}
+
 @media(max-width: 465px) {
 	#home .welcome h1 {
     	font-size: 25pt !important;
@@ -80,8 +96,20 @@
 	#home .welcome {
 		margin-left: 5% !important;
 	}
-}
 
+	#sobre .curriculo {
+		margin-top: 9%;
+    	width: 60% !important;
+    	padding: 6% !important;
+	}
+}
+@media(max-width: 350px) {
+	#sobre .curriculo {
+		margin-top: 9%;
+    	width: 70% !important;
+    	padding: 7% !important;
+	}
+}
 @media(max-width: 368px) {
 	#home .welcome {
 		margin-left: 2% !important;
